Fix: Overflow on account page fields.

--- a/src/pages/settings/panes/Panes.module.scss
+++ b/src/pages/settings/panes/Panes.module.scss
@@ -58,6 +58,10 @@
 
         .detail {
             flex-grow: 1;
+            min-width: 0;
+
+            display: flex;
+            flex-direction: column;
 
             .subtext {
                 display: inline;
@@ -74,6 +78,12 @@
                 &:hover {
                     text-decoration: underline;
                 }
+            }
+
+            p {
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
             }
         }
 
